<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragmentWaybillFillForm_productAmountLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/waybillFillFormFragment_productAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentWaybillFillForm_productAmountEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/fragmentWaybillFillForm_productAmountLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragmentWaybillFillForm_productAmountLabelTextView"
            app:layout_constraintTop_toTopOf="@id/fragmentWaybillFillForm_productAmountLabelTextView" />

        <FrameLayout
            android:id="@+id/fragmentWaybillFillForm_receiverPhotoFrameLayout"
            android:layout_width="184dp"
            android:layout_height="184dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentWaybillFillForm_productAmountLabelTextView">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/fragmentWaybillFillForm_receiverPhotoImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragmentWaybillFillForm_receiverPhotoEmptyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/waybillFillFormFragment_addPhoto" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fragmentWaybillFillForm_signLayout"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentWaybillFillForm_receiverPhotoFrameLayout" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fragmentWaybillFillForm_signClearButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/fragmentWaybillFillForm_signLayout"
            app:layout_constraintEnd_toEndOf="@id/fragmentWaybillFillForm_signLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragmentWaybillFillForm_amountLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/waybillInfoFragment_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentWaybillFillForm_signLayout" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentWaybillFillForm_amountEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/fragmentWaybillFillForm_amountLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragmentWaybillFillForm_amountLabelTextView"
            app:layout_constraintTop_toTopOf="@id/fragmentWaybillFillForm_amountLabelTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragmentWaybillFillForm_differentAmountMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/waybillFillFormFragment_differentAmountMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentWaybillFillForm_amountLabelTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragmentWaybillFillForm_differenceReasonLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/waybillFillFormFragment_amountDifferenceReason"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentWaybillFillForm_differentAmountMessage" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentWaybillFillForm_differenceReasonEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:lines="2"
            android:maxLines="4"
            android:minLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentWaybillFillForm_differenceReasonLabelTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>