<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentWaybillInfo_infoScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@drawable/shape_scroll_view_thumb"
    android:scrollbarTrackVertical="@drawable/shape_scroll_view_track">

    <LinearLayout
        android:id="@+id/fragmentWaybillINfo_infoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_contractorLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waybillInfoFragment_contractor"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_contractorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="end"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_addressLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waybillInfoFragment_address"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_addressTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="end"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_documentLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waybillInfoFragment_document"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_documentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="end"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_amountLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waybillInfoFragment_amount"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_amountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="end"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_capacityLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waybillInfoFragment_capacity"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_capacityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="end"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_wrapperColorLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waybillInfoFragment_wrapper_color"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/fragmentWaybillInfo_wrapperColorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="end"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragmentWaybillInfo_notesLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/waybillInfoFragment_notes"
                android:textAppearance="@android:style/TextAppearance.Material.Body2" />

            <LinearLayout
                android:id="@+id/fragmentWaybillInfo_notesLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragmentWaybillInfo_returnLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/waybillInfoFragment_return"
                android:textAppearance="@android:style/TextAppearance.Material.Body2" />

            <LinearLayout
                android:id="@+id/fragmentWaybillInfo_returnLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fragmentWaybillInfo_returnAmountLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waybillInfoFragment_amount"
                        android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fragmentWaybillInfo_returnAmountTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="end"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fragmentWaybillInfo_returnProductLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waybillInfoFragment_product"
                        android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fragmentWaybillInfo_returnProductTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="end"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fragmentWaybillInfo_returnDocumentLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waybillInfoFragment_document"
                        android:textAppearance="@android:style/TextAppearance.Material.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/fragmentWaybillInfo_returnDocumentTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="end"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>